--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "addressfield.json",
-  "version": "0.1.1",
+  "version": "1.0.0-dev",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.4.0",
