--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "addressfield.json",
-  "version": "1.1.0",
+  "version": "2.0.0-dev",
   "homepage": "https://github.com/tableau-mkt/addressfield.json",
   "authors": [
     "Eric Peterson <epeterson@tableausoftware.com>"
